sam-internal/k8s-in/flowsnake/templates/madkub-webhook/namespace-user.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kh-test-user
  labels:
    madkub-injector: enabled
  annotations:
    sfdc.net/pki-namespace: khogeland
