sam-internal/k8s-in/flowsnake/templates/madkub-webhook/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: sleep
  namespace: kh-test-user
  annotations:
    sfdc.net/pki-client-name-suffix: foo
spec:
  containers:
  - name: sleep
    image: dva-registry.internal.salesforce.com/dva/sfdc_centos7:39
    command: ["sleep", "infinity"]
