sam-internal/k8s-in/flowsnake/templates/madkub-webhook/server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: madkub-injector
  labels:
    app: madkub-injector
spec:
  ports:
  - port: 443
    targetPort: 8443
  selector:
    app: madkub-injector
