sam-internal/k8s-in/flowsnake/templates/madkub-webhook/webhook-config.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  name: madkub-injector-webhook-cfg
  labels:
    app: madkub-injector
webhooks:
  - name: madkub-injector.flowsnake.sfdc.net
    failurePolicy: "Fail"
    clientConfig:
      service:
        name: madkub-injector
        namespace: default
        path: "/"
      caBundle: "IwojIFRISVMgRklMRSBJUyBGT1IgUFJPRFVDVElPTiBPTkxZCiMgCiMgTk9URTogRE8gTk9UIExFQVZFIEFOIEVNUFRZIExJTkUgQVQgVEhFIEVORCBPRiBUSElTIEZJTEUKIwojIFVzZToga2V5dG9vbCAtcHJpbnRjZXJ0IC12IC1maWxlIGNhY2VydHMucGVtCiMKIwojIE93bmVyOiBDTj1zYWxlc2ZvcmNlLmNvbSBJbnRlcm5hbCBSb290IENBIDEsIE89InNhbGVzZm9yY2UuY29tLCBpbmMuIiwgQz1VUwojIElzc3VlcjogQ049c2FsZXNmb3JjZS5jb20gSW50ZXJuYWwgUm9vdCBDQSAxLCBPPSJzYWxlc2ZvcmNlLmNvbSwgaW5jLiIsIEM9VVMKIyBTZXJpYWwgbnVtYmVyOiBkYWQyOGQ4NDNmYzczMzI1ZDRjMWE3NTIwN2Q0ZTc0CiMgVmF [...]
    rules:
      - operations: [ "CREATE", "UPDATE" ]
        apiGroups: [""]
        apiVersions: ["v1"]
        resources: ["pods"]
    namespaceSelector:
      matchLabels:
        madkub-injector: enabled
